# meta-ads-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: auth.py
src/: server.py
src/config/: settings.py
src/resources/: accounts.py
src/services/: account.py  ad.py  adset.py  audience.py  base.py  campaign.py  creative.py  insights.py
src/tools/: account.py  ad.py  adset.py  audience.py  campaign.py  creative.py  helpers.py  insights.py
src/types/: config.py
src/utils/: error_handler.py  logger.py  rate_limiter.py  retry.py  token_manager.py
tests/: conftest.py  test_account_resources.py  test_account_tools.py  test_ad_tools.py  test_adset_tools.py  test_audience_tools.py  test_campaign_tools.py  test_creative_tools.py  test_error_handler.py  test_rate_limiter.py  test_retry.py  test_tool_defs.py
